--- a/requirements.txt
+++ b/requirements.txt
@@ -126,6 +126,7 @@ numpydoc==0.8.0
 oauth2client==4.1.3
 oauthlib==2.1.0
 olefile==0.45.1
+opencv-python==4.0.0.21
 openpyxl==2.5.3
 overrides==1.9
 packaging==17.1
