--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
 __pycache__
 .DS_Store
 .ipynb_checkpoints
+static/cc
+static/colorized
+static/contrast
+static/gamma_corrected
+static/grayscale
+static/hsi
+static/im
+static/inv
+static/obj
+static/om
+static/original
+static/vcminus
+static/vcplus
+static/vd
+static/ve
