--- a/requirements.txt
+++ b/requirements.txt
@@ -1,259 +1,12 @@
-absl-py==0.4.0
-alabaster==0.7.10
-aniso8601==4.0.1
-appdirs==1.4.3
-appnope==0.1.0
-asn1crypto==0.24.0
-astor==0.7.1
-astroid==1.6.3
-astropy==3.0.2
-attrs==18.1.0
-aws-xray-sdk==0.95
-awscli==1.16.29
-Babel==2.5.3
-backcall==0.1.0
-backports.shutil-get-terminal-size==1.0.0
-bitarray==0.8.1
-bkcharts==0.2
-bleach==2.1.3
-bokeh==0.12.16
-boto==2.48.0
-boto3==1.9.19
-botocore==1.12.19
-Bottleneck==1.2.1
-bs4==0.0.1
-cachetools==3.1.0
-certifi==2018.4.16
-cffi==1.11.2
-chardet==3.0.4
-click==6.7
-cloudpickle==0.5.3
-colorama==0.3.9
-ConfigArgParse==0.13.0
-conllu==0.11
-contextlib2==0.5.5
-cookies==2.2.1
-cryptography==2.2.2
-cycler==0.10.0
-cymem==1.31.2
-Cython==0.26.1
-cytoolz==0.9.0.1
-dask==0.17.5
-decorator==4.3.0
-dill==0.2.8.2
-distributed==1.21.8
-docker==3.5.0
-docker-pycreds==0.3.0
-docopt==0.6.2
-docutils==0.14
-EasyProcess==0.2.3
-ecdsa==0.13
-editdistance==0.5.2
-entrypoints==0.2.3
-et-xmlfile==1.0.1
-fastcache==1.0.2
-filelock==3.0.4
-flaky==3.4.0
-Flask==0.12.4
-Flask-Cache==0.13.1
-Flask-Cors==3.0.3
-Flask-JWT==0.3.2
-Flask-RESTful==0.3.6
-Flask-SocketIO==3.0.2
-Flask-SQLAlchemy==2.3.2
-ftfy==5.5.0
-future==0.17.1
-gast==0.2.0
-gevent==1.3.0
-glob2==0.6
-GrabzIt==3.3.0
-greenlet==0.4.13
-grpcio==1.12.1
-gunicorn==19.9.0
-heapdict==1.0.0
-html5lib==1.0.1
-httplib2==0.12.1
-idna==2.6
-image==1.5.27
-image-slicer==0.2.0
-imageio==2.3.0
-imagesize==1.0.0
-import-string==0.1.0
-IndicoIo==1.2.0
-isort==4.3.4
-itsdangerous==0.24
-jdcal==1.4
-jedi==0.12.0
-Jinja2==2.10
-jmespath==0.9.3
-Js2Py==0.59
-jsondiff==1.1.1
-jsonnet==0.10.0
-jsonpickle==1.0
-jsonschema==2.6.0
-kiwisolver==1.0.1
-lazy-object-proxy==1.3.1
-locket==0.2.0
-lxml==4.2.1
-manage==0.1.13
-Markdown==2.6.11
-MarkupSafe==1.0
-mathparse==0.1.2
-matplotlib==2.2.2
-mccabe==0.6.1
-mistune==0.8.3
-mock==2.0.0
-more-itertools==4.1.0
-moto==1.3.4
-mpld3==0.3
-mpmath==1.0.0
-msgpack==0.5.6
-msgpack-numpy==0.4.1
-msgpack-python==0.5.6
-multipledispatch==0.5.0
-murmurhash==0.28.0
-mysql-connector==2.1.6
-nbconvert==5.3.1
-nbformat==4.4.0
-networkx==2.1
-nose==1.3.7
-notify-run==0.0.11
-numba==0.38.0
-numexpr==2.6.5
-numpy==1.14.3
-numpydoc==0.8.0
-oauth2client==4.1.3
-oauthlib==2.1.0
-olefile==0.45.1
-opencv-python==4.0.0.21
-openpyxl==2.5.3
-overrides==1.9
-packaging==17.1
-pandas==0.23.0
-pandocfilters==1.4.2
-parso==0.2.0
-partd==0.3.8
-path.py==11.0.1
-pathlib2==2.3.2
-patsy==0.5.0
-pbr==4.3.0
-pep8==1.7.1
-pexpect==4.5.0
-pickleshare==0.7.4
-Pillow==5.1.0
-pipreqs==0.4.9
-pkginfo==1.4.2
-plac==0.9.6
-pluggy==0.6.0
-ply==3.11
-preshed==1.0.1
-progressbar==2.5
-prompt-toolkit==1.0.15
-protobuf==3.5.2
-psutil==5.4.5
-ptyprocess==0.5.2
-py==1.5.3
-py-cpuinfo==4.0.0
-pyaml==17.12.1
-pyasn1==0.4.4
-pyasn1-modules==0.2.4
-pybeep==0.0.4
-pycodestyle==2.4.0
-pycosat==0.6.3
-pycparser==2.18
-pycrypto==2.6.1
-pycryptodome==3.6.6
-pycurl==7.43.0.1
-pydub==0.22.1
-pyflakes==1.6.0
-pygame==1.9.4
-pyglet==1.3.2
-Pygments==2.2.0
-pyjsparser==2.5.2
-PyJWT==1.4.2
-pylint==1.8.4
-pymongo==3.7.2
-PyOpenGL==3.1.0
-pyOpenSSL==18.0.0
-pyparsing==2.2.0
-PyQRCode==1.2.1
-pyscreenshot==0.4.2
-PySocks==1.6.8
-pytesseract==0.2.4
-pytest==3.5.1
-pytest-arraydiff==0.2
-pytest-astropy==0.3.0
-pytest-doctestplus==0.1.3
-pytest-openfiles==0.3.0
-pytest-remotedata==0.2.1
-python-dateutil==2.6.1
-python-engineio==2.3.2
-python-jose==2.0.2
-python-socketio==2.0.0
-python-twitter==3.4.2
-pytz==2017.3
-PyVirtualDisplay==0.2.1
-PyWavelets==0.5.2
-PyYAML==3.12
-pyzmq==17.0.0
-QtAwesome==0.4.4
-qtconsole==4.3.1
-QtPy==1.4.1
-regex==2017.4.5
-reportlab==3.5.13
-requests==2.20.0
-requests-oauthlib==1.0.0
-responses==0.9.0
-rope==0.10.7
-rsa==3.4.2
-ruamel-yaml==0.15.35
-s3transfer==0.1.13
+pandas==0.25.1
 scipy==1.1.0
-Send2Trash==1.5.0
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
-six==1.11.0
-snowballstemmer==1.2.1
-sortedcollections==0.6.1
-sortedcontainers==1.5.10
-South==1.0.2
-Sphinx==1.7.4
-sphinxcontrib-websupport==1.0.1
-SQLAlchemy==1.2.7
-sqlparse==0.2.4
-statsmodels==0.9.0
-sympy==1.1.1
-tables==3.4.3
-tblib==1.3.2
-termcolor==1.1.0
-terminado==0.8.1
-tesseract==0.1.3
-testpath==0.3.1
-thinc==6.10.3
-toolz==0.9.0
-tornado==5.0.2
-tqdm==4.26.0
-traitlets==4.3.2
-typing==3.6.4
-tzlocal==1.5.1
-ua-parser==0.8.0
-ujson==1.35
-unicodecsv==0.14.1
-Unidecode==1.0.22
-uritemplate==3.0.0
-urllib3==1.22
-user-agents==1.1.0
-visvis==1.11.1
-wcwidth==0.1.7
-webencodings==0.5.1
-websocket-client==0.53.0
-Werkzeug==0.14.1
-whitenoise==4.1
-widgetsnbextension==3.2.1
-wrapt==1.10.11
-xlrd==1.1.0
-XlsxWriter==1.0.4
-xlwt==1.2.0
-xmltodict==0.11.0
-yarg==0.1.9
-zict==0.1.3
+Werkzeug==0.16.0
+numpy==1.15.0
+Flask==1.1.1
+torchvision==0.4.2
+matplotlib==3.1.1
+torch==1.3.1
+opencv_python==3.4.2.17
+PyWavelets==1.0.3
+Pillow==7.0.0
+progressbar33==2.4
