--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,10 @@ scipy==1.1.0
 Werkzeug==0.16.0
 numpy==1.15.0
 Flask==1.1.1
-torchvision==0.4.2
-matplotlib==3.1.1
-torch==1.3.1
+matplotlib==3.1.1 
 opencv_python==3.4.2.17
 PyWavelets==1.0.3
 Pillow==7.0.0
 progressbar33==2.4
+--find-links https://download.pytorch.org/whl/torch_stable.html torch==1.4.0+cpu
+--find-links https://download.pytorch.org/whl/torch_stable.html torchvision==0.5.0+cpu
